# lgm-30g

./: .gitignore  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/analytics/: jest.config.ts  project.json  webpack.config.js
apps/analytics-e2e/: project.json
apps/analytics/src/: analytics.routes.ts  analytics.service.ts  main.ts  utils.ts
apps/analytics/src/middlewares/: auth.middleware.ts
apps/api/src/: main.ts
apps/api/src/assets/: index.html
apps/auth/: tsconfig.app.json
apps/auth/src/: auth.routes.ts  main.ts
apps/auth/src/config/: index.ts
apps/auth/src/libs/: rabbitmq.lib.ts
apps/classifier/: README.md  project.json  pyproject.toml
apps/classifier/pymonorepo_classifier/: main.py  models.py  server.py
apps/classifier/pymonorepo_classifier/config/: database.py
apps/classifier/pymonorepo_classifier/libs/: rabbitmq.py
apps/classifier/src/libs/: rabbitmq.py
apps/classifier/tests/: test_hello.py
classifier-service/: pyvenv.cfg  requirements.txt
classifier-service/src/: main.py  utils.py  website_classifier.py  website_scraper.py
classifier-service/src/config/: database.py
libs/data-access-analytics/: README.md  jest.config.ts  project.json
libs/data-access-analytics/src/: index.ts
libs/prisma/: project.json
libs/prisma/src/: index.ts  schema.prisma  seed.ts
libs/shared/: tsconfig.lib.json  tsconfig.spec.json
libs/shared/src/: index.ts  session.d.ts
user-service/: package.json  tsconfig.json
user-service/src/: index.ts
user-service/src/config/: index.ts
(+13 files in other folders)
